# claude-token-guard

./: .coveragerc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  agent-lifecycle.sh  agent-metrics.py  budget-guard.py  check-inbox.sh  guard_contracts.py  guard_normalize.py  health-check.sh  hook_utils.py  mcp-readiness.py  pyproject.toml  read-efficiency-guard.py  self-heal.py  session-end.sh  session-register.sh  terminal-heartbeat.sh  token-guard-config.json  token-guard.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-lint.yml  ci.yml  mutation.yml  release.yml
claude_token_guard/: __init__.py  cli.py
docs/: ARCHITECTURE.md  compatibility.md  hook-payloads.md  security.md
examples/: custom-config.md  local-hooks-setup.md
tests/: conftest.py  run_tests.sh  sitecustomize.py  test_direct_imports.py  test_guard_contracts.py  test_integration.py  test_packaging.py  test_performance.py  test_properties.py  test_read_efficiency_guard.py  test_read_guard.py  test_self_heal.py  test_token_guard.py
