[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-token-guard"
version = "1.0.0"
description = "Stop Claude Code from burning your API budget. Mechanical enforcement via sys.exit(2)."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [{name = "Drew Dawson"}]
keywords = ["claude", "claude-code", "token-management", "cost-optimization", "hooks"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/DrewDawson2027/claude-token-guard"
Issues = "https://github.com/DrewDawson2027/claude-token-guard/issues"

[project.scripts]
claude-token-guard = "claude_token_guard.cli:main"

[project.optional-dependencies]
dev = ["pytest", "hypothesis", "pytest-benchmark", "mutmut", "ruff"]

[tool.mutmut]
paths_to_mutate = "token-guard.py:read-efficiency-guard.py:hook_utils.py"
tests_dir = "tests/"
runner = "python -m pytest tests/ -x -q --benchmark-disable"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
